tests/elab/errors/pattern_matching/inexhaustive_match.snapshot
exit status: 1

stdout = """
def foo: Bool -> Int = fun(x: Bool) => #error;
types of expressions:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
10..53 | fun(x: Bool) => ma...n    false => 1,\n} | Bool -> Int
17..21 | Bool                                     | Type
26..53 | match x {\n    false => 1,\n}            | Int
32..33 | x                                        | Bool
49..50 | 1                                        | Int
types of patterns:
span   | source                                   | type
-------|------------------------------------------|-----------------------------
14..15 | x                                        | Bool
40..45 | false                                    | Bool
metavars:
?0 = fun(_: #error) => Int
"""

stderr = """
error: inexhaustive pattern match
  ┌─ tests/elab/errors/pattern_matching/inexhaustive_match.pion:1:33
  │
1 │ def foo = fun(x: Bool) => match x {
  │                                 ^

aborting due to 1 previous error
"""
